--- a/nikhilesh.html
+++ b/nikhilesh.html
@@ -34,7 +34,7 @@ text-align:right;
 <body background="https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?w=2000">
 <marquee><font color="black">Hello Welcome,Details of Nikhilesh available here</font></marquee>
 <hr><img class="one" title="Nikhilesh Kudari" src="https://pbs.twimg.com/profile_images/1424396013700194312/BGBw8QUL_400x400.jpg" >
-<img class="one"  title="Nikhilesh Kudari" src=".\nik1.jpg" ><img class="one"  title="Nikhilesh Kudari" src="nik5.jpg" ><img class="one"  title="Nikhilesh Kudari" src="nik4.jpg" ><img class="one"  title="Nikhilesh Kudari" src="nik3.jpg" ><img class="one"  title="Nikhilesh Kudari" src="nik2.jpg" ></p><hr>
+<img class="one"  title="Nikhilesh Kudari" src=".\nik1.jpg" ><img class="one"  title="Nikhilesh Kudari" src="nik5.jpg" ><img class="one"  title="Nikhilesh Kudari" src="nik4.jpg" ><img class="one"  title="Nikhilesh Kudari" src="nik3.jpg" ><img class="one"  title="Nikhilesh Kudari" src="nik2.JPG" ></p><hr>
 <center>
 <b>Name</b>:Nikhilesh<br>
 <b>Surname</b>:Kudari<br>
